Fix Infinite Scroll on mobile browsers
Resolves #97

--- a/rtl.css
+++ b/rtl.css
@@ -1515,7 +1515,7 @@ body {
 }
 
 .infinite-wrap {
-	float: right;
+	max-width: 700px;
 }
 
 .infinite-loader {
