--- a/style.css
+++ b/style.css
@@ -1515,7 +1515,6 @@ body {
 }
 
 .infinite-wrap {
-	float: right;
 	max-width: 700px;
 }
 
